// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ orientation and not responsive: horizontal 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 ebGAQv"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ orientation and not responsive: vertical 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 diACVj"
  orientation="vertical"
>
  <div
    class="Stepperstyles__Line-isps26-1 cKMygt"
    orientation="vertical"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 kgxhRh"
    orientation="vertical"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 ijaoU"
    orientation="vertical"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="vertical"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 lghnlH"
      orientation="vertical"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 ijaoU"
    orientation="vertical"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="vertical"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 lghnlH"
      orientation="vertical"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ orientation: horizontal 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ orientation: vertical 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 fSNbFv"
  orientation="vertical"
>
  <div
    class="Stepperstyles__Line-isps26-1 cKMygt"
    orientation="vertical"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 kgxhRh"
    orientation="vertical"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 ijaoU"
    orientation="vertical"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="vertical"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 lghnlH"
      orientation="vertical"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 ijaoU"
    orientation="vertical"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="vertical"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 lghnlH"
      orientation="vertical"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ size and error: l 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 ffIeMS"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 cmxxrV"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 uTfFL"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ size and error: s 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 gLTxEJ"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 uTfFL"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ size: l 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 ffIeMS"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 ffIeMS"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ size: s 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 RUUYR"
    orientation="horizontal"
    width="-100"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;

exports[`Stepper w/ value 1`] = `
<div
  class="Stepperstyles__Box-isps26-0 iycJxe"
  orientation="horizontal"
>
  <div
    class="Stepperstyles__Line-isps26-1 heOLbh"
    orientation="horizontal"
  />
  <div
    class="Stepperstyles__Progress-isps26-2 dKfPBZ"
    orientation="horizontal"
    width="0"
  />
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 eZYYYa"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 bTkXjg"
      orientation="horizontal"
    >
      1
    </div>
  </div>
  <div
    class="Stepstyles__Box-xs87tg-1 bYPBVL"
    orientation="horizontal"
  >
    <div
      class="Stepstyles__Point-xs87tg-2 khSHdq"
      orientation="horizontal"
    />
    <div
      class="Stepstyles__Title-xs87tg-0 dnwhVA"
      orientation="horizontal"
    >
      2
    </div>
  </div>
</div>
`;
